--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -53,56 +53,60 @@ jobs:
         id: ssm
         run: |
           set -euo pipefail
-          
-          # 1) SSM parameters JSON (리터럴 heredoc: 변수/따옴표 미확장)
           cat > /tmp/ssm-params.json <<'JSON'
           {
             "commands": [
               "#!/bin/bash",
               "set -euo pipefail",
               "set -x",
-          
+
               "APP_NAME=readycode",
               "APP_PATH=/home/ubuntu/app.jar",
               "S3_BUCKET=readycode-artifacts-gorhkd223-ap-northeast-2",
               "S3_KEY=server/app.jar",
-          
+
               "command -v aws >/dev/null 2>&1 || { sudo apt-get update -y && sudo apt-get install -y awscli; }",
               "command -v jq  >/dev/null 2>&1 || sudo apt-get install -y jq",
-              "command -v curl>/dev/null 2>&1 || sudo apt-get install -y curl",
-          
+              "command -v curl >/dev/null 2>&1 || sudo apt-get install -y curl",
+
               "echo Backing up old jar",
               "if [ -f \"$APP_PATH\" ]; then cp \"$APP_PATH\" /home/ubuntu/app-rollback.jar; fi",
-          
+
               "echo Downloading new jar",
               "aws s3 cp s3://$S3_BUCKET/$S3_KEY \"$APP_PATH\"",
               "ls -lh \"$APP_PATH\" || true",
-          
+
               "echo Restarting service",
               "sudo systemctl daemon-reload || true",
               "if ! sudo systemctl restart \"$APP_NAME\"; then sudo systemctl status \"$APP_NAME\" --no-pager -l || true; sudo journalctl -u \"$APP_NAME\" --no-pager -n 200 || true; exit 1; fi",
-          
+
               "# 활성 상태 1차 확인",
               "if ! sudo systemctl is-active --quiet \"$APP_NAME\"; then echo 'Service not active right after restart; printing status/journal' >&2; sudo systemctl status \"$APP_NAME\" --no-pager -l || true; sudo journalctl -u \"$APP_NAME\" --no-pager -n 200 || true; fi",
-          
+
               "echo Health check",
-              "sleep 30",
+              "sleep 10",
               "for i in {1..60}; do",
-              "sleep 5", 
-              "STATUS=$(curl -s -f http://127.0.0.1:8080/actuator/health | jq -r .status 2>/dev/null || echo 'DOWN')",
-              "echo \"STATUS: $STATUS\"", 
-              "if [ \"$STATUS\" = \"UP\" ]; then echo SUCCESS; exit 0; fi",
+              "  HTTP=$(curl -s -o /tmp/h.json -w '%{http_code}' http://127.0.0.1:8080/actuator/health/liveness || echo 000)",
+              "  if echo \"$HTTP\" | grep -Eq '^(200|401)$'; then",
+              "    if [ \"$HTTP\" = \"200\" ]; then",
+              "      if jq -e '.status==\"UP\"' </tmp/h.json >/dev/null 2>&1; then",
+              "        echo 'SUCCESS (UP)'; exit 0;",
+              "      fi",
+              "    else",
+              "      echo \"SUCCESS (HTTP $HTTP)\"; exit 0;",
+              "    fi",
+              "  fi",
+              "  sleep 2",
               "done",
-          
-              "echo FAIL, rollback",
+
+              "echo 'FAIL, rollback'",
               "cp /home/ubuntu/app-rollback.jar \"$APP_PATH\" || true",
               "sudo systemctl restart \"$APP_NAME\" || true",
               "exit 1"
             ]
           }
           JSON
-          
-          # 2) SSM 실행 (file:// 파라미터)
+
           CMD_ID=$(aws ssm send-command \
             --region ap-northeast-2 \
             --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" \
@@ -115,7 +119,7 @@ jobs:
             --cli-binary-format raw-in-base64-out \
             --parameters file:///tmp/ssm-params.json \
             --query "Command.CommandId" --output text)
-          
+
           echo "command_id=$CMD_ID" >> "$GITHUB_OUTPUT"
 
       - name: Resolve actual targets (debug)
