--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -2,10 +2,11 @@ name: deploy-backend
 on:
   workflow_dispatch:
   push:
-    branches: [ infra/epic ]
+    branches: [ infra/epic, main ]
     paths:
       - '.github/workflows/**'
       - 'infra/**'
+      - 'backend/**'
 permissions:
   id-token: write
   contents: read
@@ -19,8 +20,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: main
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -66,8 +65,8 @@ jobs:
               "S3_KEY=server/app.jar",
 
               "command -v aws >/dev/null 2>&1 || { sudo apt-get update -y && sudo apt-get install -y awscli; }",
-              "command -v jq  >/dev/null 2>&1 || sudo apt-get install -y jq",
-              "command -v curl >/dev/null 2>&1 || sudo apt-get install -y curl",
+              "for p in jq curl; do command -v $p >/dev/null 2>&1 || { sudo apt-get update -y && sudo apt-get install -y $p; }; done",
+
 
               "echo Backing up old jar",
               "if [ -f \"$APP_PATH\" ]; then cp \"$APP_PATH\" /home/ubuntu/app-rollback.jar; fi",
@@ -80,21 +79,14 @@ jobs:
               "sudo systemctl daemon-reload || true",
               "if ! sudo systemctl restart \"$APP_NAME\"; then sudo systemctl status \"$APP_NAME\" --no-pager -l || true; sudo journalctl -u \"$APP_NAME\" --no-pager -n 200 || true; exit 1; fi",
 
-              "# 활성 상태 1차 확인",
               "if ! sudo systemctl is-active --quiet \"$APP_NAME\"; then echo 'Service not active right after restart; printing status/journal' >&2; sudo systemctl status \"$APP_NAME\" --no-pager -l || true; sudo journalctl -u \"$APP_NAME\" --no-pager -n 200 || true; fi",
 
               "echo Health check",
               "sleep 10",
               "for i in {1..60}; do",
-              "  HTTP=$(curl -s -o /tmp/h.json -w '%{http_code}' http://127.0.0.1:8080/actuator/health/liveness || echo 000)",
-              "  if echo \"$HTTP\" | grep -Eq '^(200|401)$'; then",
-              "    if [ \"$HTTP\" = \"200\" ]; then",
-              "      if jq -e '.status==\"UP\"' </tmp/h.json >/dev/null 2>&1; then",
-              "        echo 'SUCCESS (UP)'; exit 0;",
-              "      fi",
-              "    else",
-              "      echo \"SUCCESS (HTTP $HTTP)\"; exit 0;",
-              "    fi",
+              "HTTP=$(curl -s -o /tmp/h.json -w '%{http_code}' http://127.0.0.1:8080/actuator/health/liveness || echo 000)",
+              "if [ \"$HTTP\" = \"200\" ] && jq -e '.status==\"UP\"' </tmp/h.json >/dev/null 2>&1; then",
+              "    echo 'SUCCESS (200 & UP)'; exit 0;",
               "  fi",
               "  sleep 2",
               "done",
