--- a/.github/workflows/backend-pr.yml
+++ b/.github/workflows/backend-pr.yml
@@ -1,12 +1,18 @@
 name: backend-pr
+
 on:
   pull_request:
     branches: [ main ]
     paths: [ 'backend/**' ]
-defaults: { run: { working-directory: backend } }
+
+defaults:
+  run:
+    working-directory: backend
 
 jobs:
-  build-test:
+  test:
+    name:
+      backend: test
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Seoul
@@ -14,6 +20,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
-        with: { java-version: '17', distribution: 'temurin' }
-      - run: chmod +x gradlew
-      - run: ./gradlew clean test
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Run tests
+        run: ./gradlew clean test --no-daemon --stacktrace --info
+
+      - name: Upload test report (always)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-test-report
+          path: |
+            backend/build/reports/tests/test
+            backend/build/test-results/test
