--- a/.github/workflows/frontend-pr.yml
+++ b/.github/workflows/frontend-pr.yml
@@ -1,19 +1,27 @@
 name: frontend-pr
+
 on:
   pull_request:
     branches: [ main ]
     paths: [ 'frontend/**' ]
-defaults: { run: { working-directory: frontend } }
+
+defaults:
+  run:
+    working-directory: frontend
 
 jobs:
   build:
+    name:
+      frontend: build
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Seoul
-      SPRING_PROFILES_ACTIVE: test
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: '18', cache: 'npm', cache-dependency-path: frontend/package-lock.json }
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - run: npm ci
       - run: npm run build
