--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -91,12 +91,14 @@ jobs:
 
               "if ! sudo systemctl is-active --quiet \"$APP_NAME\"; then echo 'Service not active right after restart; printing status/journal' >&2; sudo systemctl status \"$APP_NAME\" --no-pager -l || true; sudo journalctl -u \"$APP_NAME\" --no-pager -n 200 || true; fi",
 
-              "echo Health check",
-              "sleep 10",
-              "for i in {1..60}; do",
-              "HTTP=$(curl -s -o /tmp/h.json -w '%{http_code}' http://127.0.0.1:8080/actuator/health || echo 000)",
-              "if [ \"$HTTP\" = \"200\" ] && jq -e '.status==\"UP\"' </tmp/h.json >/dev/null 2>&1; then",
-              "    echo 'SUCCESS (200 & UP)'; exit 0;",
+              "echo Health check (wait until UP)",
+              "for i in {1..45}; do",
+              "  # prefer readiness endpoint if available",
+              "  if curl -fsS http://127.0.0.1:8080/actuator/health/readiness | grep -q '\"status\":\"UP\"' 2>/dev/null; then",
+              "    echo 'SUCCESS (readiness UP)'; exit 0;",
+              "  fi",
+              "  if curl -fsS http://127.0.0.1:8080/actuator/health | grep -q '\"status\":\"UP\"' 2>/dev/null; then",
+              "    echo 'SUCCESS (health UP)'; exit 0;",
               "  fi",
               "  sleep 2",
               "done",
